Add minimal blurb

--- a/app/partials/logservers.html
+++ b/app/partials/logservers.html
@@ -1,3 +1,9 @@
+<div class="jumbotron">
+    <p>Certificate Transparency (CT) is a project that aims to improve transparency around TLS certificates, to help avoid another [DigiNotar incident](https://en.wikipedia.org/wiki/DigiNotar#Issuance_of_fraudulent_certificates). <a href="http://www.certificate-transparency.org/what-is-ct">How does CT work?</a>
+
+    <p>Certificate Transparency Watch is a CT auditor: it follows all CT log servers and checks they are behaving correctly.</p>
+</div>
+
 <table class="table">
     <thead>
         <th>Log Server</th>
