Markdown is not valid HTML. :)

--- a/app/partials/logservers.html
+++ b/app/partials/logservers.html
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-    <p>Certificate Transparency (CT) is a project that aims to improve transparency around TLS certificates, to help avoid another [DigiNotar incident](https://en.wikipedia.org/wiki/DigiNotar#Issuance_of_fraudulent_certificates). <a href="http://www.certificate-transparency.org/what-is-ct">How does CT work?</a>
+    <p>Certificate Transparency (CT) is a project that aims to improve transparency around TLS certificates, to help avoid another <a href="https://en.wikipedia.org/wiki/DigiNotar#Issuance_of_fraudulent_certificates">DigiNotar incident</a>.
 
     <p>Certificate Transparency Watch is a CT auditor: it follows all CT log servers and checks they are behaving correctly.</p>
 </div>
