Mention that CT is being standardised?

--- a/app/partials/logservers.html
+++ b/app/partials/logservers.html
@@ -1,5 +1,7 @@
 <div class="jumbotron">
     <p>Certificate Transparency (CT) is a project that aims to improve transparency around TLS certificates, to help avoid another <a href="https://en.wikipedia.org/wiki/DigiNotar#Issuance_of_fraudulent_certificates">DigiNotar incident</a>.
+    
+    <p>CT is an experimental RFC, <a href="http://tools.ietf.org/html/rfc6962">RFC 6962</a>, created by Google, that will soon be supported in Google Chrome.</p>
 
     <p>Certificate Transparency Watch is a CT auditor: it follows all CT log servers and checks they are behaving correctly.</p>
 </div>
