Update expected JSON field names
These were changed in the reimplementation of the API server (from Ruby
to Scala)

--- a/app/partials/logserver.html
+++ b/app/partials/logserver.html
@@ -27,8 +27,8 @@
         <tr ng-repeat="sth in logserver.sth.bad">
             <td>{{sth.timestamp.utc().format("YYYY-MM-DD HH:mm:ss")}}Z</td>
             <td>{{sth.treesize}}</td>
-            <td>{{sth.roothash}}</td>
-            <td>{{sth.treeheadsignature}}</td>
+            <td>{{sth.rootHash}}</td>
+            <td>{{sth.treeHeadSignature}}</td>
         </tr>
     </tbody>
 </table>
